[metadata]
name = all_nodes
version = 1.10.1
description = PySide2-based visual programming for Python 3
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT license
license_file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
author = Jaime Rivera
author_email = git@jaimervq.se
url = https://github.com/jaimervq/all_nodes
project_urls =
    Source Repository = https://github.com/jaimervq/all_nodes
    Documentation = https://github.com/jaimervq/all_nodes/blob/main/README.md


[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = ==3.10.*
install_requires =
    colorama
    numpy < 2
    matplotlib < 3.9
    Pillow
    PySide2 < 6
    PyYAML == 6.*
    polars == 1.3.*
    pymongo
    ruff < 1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  all-nodes = all_nodes.main:main